--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
 body {
     background-color: #FF86C8;
-    font-family: "Secular One" , sans-serif;
+    font-family: "Gloria Hallelujah" , sans-serif;
     color: #404E5C;
 }
 
@@ -10,11 +10,11 @@ body {
     text-align: center;
     font-size: 80px;
     margin: 25px;
-    color: ;
 }
 
  section {
     display: flex;
+    font-size: 22px;
 
 }
     
