--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,10 @@ body {
     margin: 25px;
 }
 
- section {
-    display: flex;
+ .game-details {
+    display: inline-flex;
     font-size: 22px;
+    padding: 10px;
 
 }
     
@@ -25,6 +26,7 @@ body {
     height: 606px;
     width: 606px;
     border: solid black 1px;
+    margin: auto;
 }
 
 .circle {
@@ -32,4 +34,8 @@ body {
     width: 200px;
     border: solid black 1px;
     border-radius: 50%;
+}
+
+.piggy {
+    background-color: white;
 }
