--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@ body {
 }
 
  .game-details {
-    display: inline-flex;
+    display: flex;
+    justify-content: space-around;
     font-size: 22px;
     padding: 10px;
 
@@ -25,7 +26,6 @@ body {
     flex-wrap: wrap;
     height: 606px;
     width: 606px;
-    border: solid black 1px;
     margin: auto;
 }
 
