--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,16 @@ body {
     color: #404E5C;
 }
 
+#over-lay {
+    position: fixed;
+    display: none;
+    width: 50%;
+    height: 50%;
+    background-color: rgba(255, 134, 200, .5);
+    z-index: 2;
+    cursor: pointer;
+}
+
 #title {
     text-align: center;
     font-size: 80px;
@@ -17,10 +27,8 @@ body {
     justify-content: space-around;
     font-size: 22px;
     padding: 10px;
-
 }
     
-
 .table {
     display: flex;
     flex-wrap: wrap;
