media query for iphoneX added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
-
+/* start game styles and main body style */
 body {
     background-color: #FF86C8;
     font-family: "Gloria Hallelujah" , sans-serif;
@@ -38,6 +38,7 @@ p {
     background-color: #FFFBFE;
 }
 
+/* Main game styles */
  .game-details-container {
     display: flex;
     justify-content: space-around;
@@ -79,6 +80,8 @@ p {
 
 }
 
+/*End game container styles*/
+
 .end-game-container {
     width: 100%;
     position: absolute;
@@ -113,4 +116,53 @@ p {
 
 }
 
-@media 
+/* Media Queries */
+/* Iphone X */
+@media only screen 
+and (max-width: 375px) 
+and (max-height: 812px) {
+    #title {
+        font-size: 40px;
+    }
+
+    p {
+        margin: auto;
+        font-size: 20px;
+    }
+    
+    .main-game-container {
+        overflow: hide;
+    }
+
+    .game-details-container {
+        padding-left: 12px;
+        font-size: 10px;
+    }
+
+    .table {
+        height: 350px;
+        width: 350px;
+        padding-left: 12px;
+
+    }
+
+    .circle {
+        height: 102px;
+        width: 102px;
+        margin: auto;
+        
+    }
+
+    .piggy {
+        background-image: url(../images/PiggyPic\ for\ media\ queries.png);
+    }
+
+    #end-game {
+        font-size: 40px;
+    }
+
+    #total {
+        font-size: 20px;
+    }
+
+}
