--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,15 @@ p {
 }
 
 /* Media Queries */
-/* Iphone X */
+/* Iphone 6/7/8 plus*/
+@media only screen 
+and (max-width: 414px) 
+and (max-height: 736px) {
+    
+}
+
+
+/* Iphone X  and Iphone 6/7/8*/
 @media only screen 
 and (max-width: 375px) 
 and (max-height: 812px) {
@@ -135,7 +143,7 @@ and (max-height: 812px) {
     }
 
     .game-details-container {
-        padding-left: 12px;
+        padding-left: 35px;
         font-size: 10px;
     }
 
@@ -164,5 +172,52 @@ and (max-height: 812px) {
     #total {
         font-size: 20px;
     }
+
+}
+
+/*I phone 5/5se*/
+@media only screen 
+and (max-width: 320px) 
+and (max-height: 568px) {
+    .start-game-container {
+        padding-left: 5px;
+    }
+
+    #title {
+        margin: auto;
+    }
+
+    p {
+        margin: auto;
+    }
+
+    .game-details-container {
+        padding-left: 40px;
+        font-size: 10px;
+    }
+
+    #score {
+        padding-right: 5px;
+    }
+
+    .table {
+        height: 320px;
+        width: 320px;
+        margin: auto;
+        padding-right: 10px;
+
+    }
+
+    .circle {
+        height: 102px;
+        width: 102px;
+        margin: auto;
+        
+    }
+
+    .piggy {
+        background-image: url(../images/PiggyPic\ for\ media\ queries.png);
+    }
+
 
 }
