--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,11 +117,120 @@ p {
 }
 
 /* Media Queries */
+/* Large Screens */
+@media only screen 
+and (max-width: 2560px) 
+and (max-height: 1440px) {
+    #title {
+        font-size: 160px;
+    }
+
+    p {
+        font-size: 55px;
+    }
+
+    #start-btn {
+        padding: 35px 70px;
+        font-size: 30px;
+    }
+
+    .game-details-container {
+        font-size: 40px;
+    }
+
+    #end-game {
+        font-size: 160px;
+    }
+
+    #total {
+        font-size: 100px;
+    }
+
+    #restart-btn {
+        padding: 35px 70px;
+        font-size: 30px;
+    }
+
+}
+
+/* Medium Screens*/
+@media only screen 
+and (max-width: 1920px) 
+and (max-height: 1080px) {
+    #title {
+        font-size: 100px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+
+    #start-btn {
+        padding: 15px 32px;
+        font-size: 25px;
+    }
+
+    .game-details-container {
+        font-size: 22px;
+    }
+
+    #end-game {
+        font-size: 100px;
+    }
+
+    #total {
+        font-size: 30px;
+    }
+
+    #restart-btn {
+        padding: 15px 32px;
+        font-size: 25px;
+    }
+
+}
+
 /* Iphone 6/7/8 plus*/
 @media only screen 
 and (max-width: 414px) 
 and (max-height: 736px) {
+    .start-game-container {
+        
     
+    }
+    #title {
+        font-size: 50px;
+    }
+
+    .game-details-container {
+        font-size: 14px;
+        align-items: center;
+    }
+
+    .table {
+        height: 350px;
+        width: 350px;
+        padding-left: 12px;
+
+    }
+
+    .circle {
+        height: 102px;
+        width: 102px;
+        margin: auto;
+        
+    }
+
+    .piggy {
+        background-image: url(../images/PiggyPic\ for\ media\ queries.png);
+    }
+
+    #end-game {
+        font-size: 40px;
+    }
+
+    #total {
+        font-size: 20px;
+    }
 }
 
 
@@ -143,14 +252,14 @@ and (max-height: 812px) {
     }
 
     .game-details-container {
-        padding-left: 35px;
+        padding-left: 20px;
         font-size: 10px;
     }
 
     .table {
         height: 350px;
         width: 350px;
-        padding-left: 12px;
+        padding-left: 10px;
 
     }
 
@@ -180,7 +289,7 @@ and (max-height: 812px) {
 and (max-width: 320px) 
 and (max-height: 568px) {
     .start-game-container {
-        padding-left: 5px;
+        padding-left: 10px;
     }
 
     #title {
@@ -217,6 +326,18 @@ and (max-height: 568px) {
 
     .piggy {
         background-image: url(../images/PiggyPic\ for\ media\ queries.png);
+    }
+
+    .end-game-container {
+        padding-left: 10px;
+    }
+
+    #end-game {
+        font-size: 40px;
+    }
+
+    #total {
+        font-size: 20px;
     }
 
 
