--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,20 @@ and (max-height: 1080px) {
     }
 }
 
+/* Ipad Pro */
+@media only screen 
+and (max-width: 1024px) 
+and (max-height: 1366px) {
+    #title {
+        font-size: 90px;
+    }
+     
+
+    .game-details-container {
+        font-size: 25px;
+
+}
+
 /* Iphone 6/7/8 plus*/
 @media only screen 
 and (max-width: 414px) 
@@ -277,7 +291,7 @@ and (max-height: 812px) {
     }
 
     .game-details-container {
-        padding-left: 20px;
+        padding-left: 10px;
         font-size: 10px;
     }
 
@@ -326,7 +340,7 @@ and (max-height: 568px) {
     }
 
     .game-details-container {
-        padding-left: 40px;
+        padding-left: 20px;
         font-size: 10px;
     }
 
