--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,9 @@ p {
     font-size: 25px;
     border-radius: 50px;
     margin: auto;
-    color: #FF86C8;
+    color: #404E5C;
     background-color: #FFFBFE;
+    border-color: black;
 }
 
 /* Main game styles */
@@ -56,7 +57,7 @@ p {
 .circle {
     height: 200px;
     width: 200px;
-    border: solid black 1px;
+    border: solid #404E5C 1px;
     border-radius: 50%;
 }
 
@@ -95,7 +96,9 @@ p {
     border-radius: 50px;
     margin: auto;
     color: #FF86C8;
-    background-color: #FFFBFE;}
+    background-color: #FFFBFE;
+    border-color: black;
+}
 
 #end-game {
     text-align: center;
@@ -186,12 +189,17 @@ and (max-height: 1080px) {
 and (max-width: 1024px) 
 and (max-height: 1366px) {
     #title {
-        font-size: 90px;
+        font-size: 85px;
     }
      
 
     .game-details-container {
         font-size: 25px;
+    }
+
+    #total {
+        font-size: 60px;
+    }
 
 }
 
@@ -284,10 +292,6 @@ and (max-height: 812px) {
     p {
         margin: auto;
         font-size: 20px;
-    }
-    
-    .main-game-container {
-        overflow: hide;
     }
 
     .game-details-container {
